# Agentic-AI

./: .gitignore  README.md  pyproject.toml
3-Debugging/: langgraph.json  openai_agent.py
3-Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
4-workflows/: 1-prompting_chaining.ipynb  2-parallelization.ipynb  3-Routing.ipynb  4-orchestrator-workflow.ipynb  4.ipynb  5-Evaluator-optimizer.ipynb
5-HumanInTheLoop/: HumanintheLoop.ipynb
6-RAGS/: 1-AgenticRAG.ipynb
LangGraph-Advance/: 1-streaming.ipynb
LangGraph-Basics/: ChainsLangGraph.ipynb  DataclassStateSchema.ipynb  ReActAgent.ipynb  chatbot.ipynb  chatbotWithTools.ipynb  pydantic.ipynb  simpleGraph.ipynb
